# dupecode

./: README.md  dupecode.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
