[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dupecode"
version = "0.1.0"
description = "Python Code Clone Detector — AST-based duplicate code finder. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kris Kimmerle"}]
keywords = ["clone", "duplicate", "code-quality", "DRY", "static-analysis", "refactoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/dupecode"
Repository = "https://github.com/kriskimmerle/dupecode"

[project.scripts]
dupecode = "dupecode:main"
